css/homepage.css
/**
* These styles are only for the home page on pcs
* 
* 
*/

:root {
  --main-text-color: #2e3338;
  --main-background-color: #f7f7f7;
  --alt-background-color: #ccc;
  --main-trim-color: #e0e0e0;

  --main-bold-blue: #004665;
  --main-light-blue: #007aa9;
  --main-orange: #ea680f;

  --link-underline-color: #dade8a;

  --image-blur-style: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65));
}

* {
  padding: 0;
  margin: 0;
  cursor: default;
}

html {
  margin: 0 auto;
  overflow: hidden;
}

body {
  font-family: "IBM Plex Sans", Helvetica, Arial, "Lucida Grande", sans-serif;
  font-size: 2.5em;
}

img {
  object-fit: contain;
  max-width: 100%;
  max-height: 100%;
}

h4 {
  letter-spacing: -1.5px;
}

a:not(.quick-links a, .navlink, .preview-item) {
  text-decoration: none;
  color: inherit;
  border-bottom: solid 1.25px var(--link-underline-color);
  transition: border-width 0.3s;

  cursor: pointer;
}

a:not(.quick-links a, .navlink, .preview-item):hover {
  border-bottom: solid 4px var(--link-underline-color);
}

.main {
  height: 100vh;

  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  justify-content: flex-start;

  perspective: 1px;

  overflow-x: hidden;
  overflow-y: scroll;
  transform-style: preserve-3d;
}

.main > * {
  z-index: 1;
}

.landing {
  min-height: 100vh;
}

.parallax, .no-parallax {
  position: relative;
  transform-style: preserve-3d;
}

.parallax::before {
  content: "";
  width: 100%;
  height: 100%;
  position: absolute;

  background: var(--image-blur-style), url("../img/davisphoto4.jpg") top center;
  background-size: cover;
  transform: translateZ(-1px) scale(2.2);
  z-index: -100;
}

.top-bar {
  display: flex;
  flex-direction: row;
}

.banner {
  display: inline;

  height: 80px;
  margin: 0;
  padding: 4px 12px;
}

.navbar {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;

  gap: 0.6em;
  width: 60%;
  margin-top: 10px;
}

.navlink {
  text-decoration: none;
  position: relative;
  color: rgba(255, 255, 255, 0.55);
  z-index: 100;

  font-size: 1rem;
}
.navlink.active {
  color: white;
}

.navlink:hover {
  cursor: pointer;
}

.navlink::after {
  content: "";
  position: absolute;
  bottom: -4px;
  left: 50%;
  width: 0;
  height: 2px;
  border-radius: 2px;
  background-color: #ccc;
  transform: translateX(-50%) scaleX(0);
  transform-origin: center;
  transition: width 0.2s ease-in-out;
}

.navlink.active::after,
.navlink:hover::after {
  width: 90%;
  transform: translateX(-50%) scaleX(1);
  transition: width 0.2s ease-in-out;
}

.title-text {
  margin: 6% 0 1% 25%;
  width: fit-content;
}

.title-text p {
  color: var(--main-trim-color);
  text-shadow: 0 4px 7px black;
  font-size: 2em;
  letter-spacing: -4px;

  border-bottom-right-radius: 8px;

  animation: title-text-animation;
  animation-delay: 0.5s;
  animation-duration: 1s;
  animation-timing-function: ease-in-out;
  animation-fill-mode: forwards;
}

@keyframes title-text-animation {
  from {
    border: 0;
  }

  to {
    border-bottom: 10px solid var(--main-bold-blue);
  }
}

.flavor-text-wrapper {
  display: inline-block;
}

.flavor-text {
  color: white;
  text-shadow: 0 4px 7px black;
  font-style: italic;
  font-size: 0.75em;
  font-weight: 500;

  padding: 8px 0;

  overflow: hidden;
  white-space: nowrap;
  width: 0;
  animation: typing;
  animation-duration: 1s;
  animation-delay: 1.5s;
  animation-timing-function: steps(52, end);
  animation-fill-mode: forwards;
}

@keyframes typing {
  from {
    width: 0;
  }
  to {
    width: 110%;
  }
}

.quick-links {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: start;

  padding-left: 30%;
}

/* .quick-links a {
  text-decoration: none;
} */

.button {
  color: white;
  background-color: var(--main-orange);
  font-size: 0.5em;
  border-radius: 5px 20px 20px 5px;

  display: flex;
  align-items: center;
  justify-content: center;

  margin-top: 15px;
  padding: 4px 15px 4px 10px;
  height: auto;
  width: auto;

  transition: 0.5s;
  cursor: pointer;
}

.important-button {
  box-shadow: 0 0 7px orange;
  font-size: 0.75em;
  background-color: red;
  margin-top: 50px;
}

.button:hover {
  border: 2px solid var(--main-trim-color);
  padding: 8px 40px 8px 14px;
  box-shadow: 0 0 7px white;
}

.down-arrow {
  position: absolute;
  bottom: 0;
  left: calc(50% - 50px - 2em);

  display: flex;
  flex-direction: row;
  align-items: center;
  color: white;
  opacity: 0.6;
  font-style: italic;
  font-weight: 300;

  transition: opacity 0.5s ease-in-out, bottom 0.5s ease-in-out;
}


.preview {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 10px;

  height: 300px;
  min-height: 300px;
  background-color: #2e3338;
  color: white;
  padding: 16px;
}
.preview-wrapper {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 16px;

  height: 100%;
  width: 100%;
}
.preview-item {
  height: 100%;
  aspect-ratio:  3 / 4;
  border-radius: 16px;
  object-position: 50% 50%;
  font-size: 0.8em;
  text-decoration: none;
  background-color: rgb(240, 240, 240);

  /* transition: aspect-ratio 0.5s ease-in-out; */
}
.preview-item:hover {
  box-shadow: 0 0 7px black;
  aspect-ratio: 1 / 1;
  cursor: pointer;
  text-align: center;
  object-position: 50% 50%;
  transition: aspect-ratio 0.5s ease-in-out;
}
.preview-item > p {
  width: fit-content;
  margin: 8px 0 0 8px;
  padding: 8px;
  border-radius: 16px;
  background-color: white;
  color: rgb(33, 37, 41);
  font-size: 0.5em;
}
.preview-item.cornell {
  background-image: url("../img/cornell.png");
  background-size: cover;
  transition: aspect-ratio 0.5s ease-in-out, opacity 1s ease-in-out 100ms;
  background-position: center;
}
.preview-item.uiuc {
  background-image: url("../img/uiuc.png");
  background-size: cover;
  transition: aspect-ratio 0.5s ease-in-out, opacity 1s ease-in-out 250ms;
  background-position: center;
}
.preview-item.saratoga {
  background-image: url("../img/saratoga.png");
  background-size: cover;
  transition: aspect-ratio 0.5s ease-in-out, opacity 1s ease-in-out 400ms;
  background-position: center;
}
.preview-item:not(.show) {
  opacity: 0;
}
.preview-item.show {
  opacity: 1;
}


.info {
  background-color: rgb(240, 240, 240);
  padding: 2em 0;
  color: black;
}
.infogrid {
  width: 80%;
  margin: 18px auto;

  display: grid;
  grid-template-columns: repeat(5, 1fr);
  grid-template-rows: repeat(2, 1fr);
  column-gap: 1rem;
  row-gap: 1rem;

  font-size: 2rem;
}
.infogrid > * {
  padding: 0.6em;
  background-color: white;
  
  border: 1px solid rgba(0, 0, 0, 0.125);
  border-radius: 1rem;
}
.infotitle {
  grid-row: span 2;
  grid-column: span 2;
  aspect-ratio: 1 / 1;
  
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
}
.infotext {
  grid-column: span 1;
  grid-row: span 1;

  font-size: 0.7em;
}
.infotext h4 {
  font-size: 0.9em;
  line-height: 1.1em;
}
.infotext hr {
  margin: 0.2em 0 0.6em;
}
.infotext p {
  font-size: 0.7em;
  line-height: 1.15em;
}
.lead {
  font-size: 0.6em;
  line-height: 1.2;
  font-weight: 300;
}
.vertical {
  grid-column: span 1;
  grid-row: span 2;
}
.horizontal {
  grid-column: span 2;
  grid-row: span 1;
}

.statistics {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  background-color: #2e3338;
  border-top: 2px solid #4e6368;
  border-bottom: 2px solid #4e6368;
  padding: 4px 0;
}
.statistics-title {
  color: white;
  font-size: 1.2em;
}
.blue {
  color: var(--main-light-blue);
}
.disclaimer {
  color: white;
  font-size: 0.4em;
  font-style: italic;
  font-weight: 100;
}
.statistics-row {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: 1fr;
  gap: 1rem;

  padding: 12px;
}
.statistics-item {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: white;

  height: auto;
  padding: 0.5em;
  aspect-ratio: 1 / 1;
  border-radius: 1rem;
}
.statistics-item > svg {
  height: 2.5em;
  width: 2.5em;
}
.statistics-item > h4 {
  font-size: 0.7em;
  font-weight: 500;
}
.statistics-item > p {
  font-size: 0.4em;
  font-weight: 300;
  text-align: center;
}

.invert-info {
  background-color: white;
  color: black;
}

.invert-infogrid {
  grid-template-columns: repeat(5, 1fr);
  grid-template-rows: repeat(2, 1fr);
}

.invert-infogrid > * {
  background-color: rgb(240, 240, 240);
  border: 1px solid rgba(255, 255, 255, 0.125);
}



footer {
  display: flex;
  flex-direction: row;
  align-items: center;

  color: white;
  background-color: rgb(33, 37, 41);

  padding: 16px;
  margin-top: auto;
  height: 100px;
  font-size: 0.45em;
}

footer * {
  margin-right: 16px;
}

footer,
.button {
  box-shadow: 0 4px 7px black;
}


@media (max-width: 1200px) {
  .infogrid {
    width: 95%;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(2, 1fr);
  }
  .infogrid > * {
    aspect-ratio: auto;
  }
  .infotitle {
    grid-row: span 1;
    grid-column: span 1;
    font-size: 0.8em;
    min-height: 6em;
  }
  .infotext p {
    font-size: 0.6em;
  }
  .vertical {
    grid-column: span 1;
    grid-row: span 1;
  }
  .horizontal {
    grid-column: span 1;
    grid-row: span 1;
  }
  .invert-infogrid {
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(2, 1fr);
  }
}

/* Mobile Device Style Overrides */
@media (max-width: 800px) {
  body {
    font-size: 5vw;
  }

  .banner {
    z-index : 10;
    position: relative;
    height: 60px;
  }

  .parallax > * {
    z-index: 3;
  }
  .parallax::before {
    z-index: 2;
  }

  .top-bar {
    flex-direction: column;
    align-items: center;
  }
  .navbar {
    width: 100%;
  }
  .navlink {
    font-size: 0.6em;
  }

  .title-text {
    z-index: 10;
    position: relative;
    font-size: 1.5em;
    margin: 10% 0 10% 10%;
  }

  .quick-links {
    z-index: 10;
    position: relative;
    padding-left: 20%;
  }
  
  .flavortext,
  .title-text strong {
    z-index: 11;
    position: relative;
  }

  .button {
    font-size: 1.1em;
  }

  .preview {
    padding: 8px;
    gap: 5px;
  }
  .preview-item {
    height: 80%;
    aspect-ratio: 1 / 2;
  }
  .preview-item:hover {
    aspect-ratio: 5 / 8;
  }

  .statistics-row {
    grid-template-rows: 1fr 1fr;
    grid-template-columns: 1fr 1fr;
  }
  .statistics-item {
    padding: 0.3em;
  }
  .statistics-item > h4 {
    font-size: 0.9em;
  }
  .statistics-item > p {
    font-size: 0.5em;
  }

  .invert-infogrid {
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(3, 1fr);
  }

  footer {
    font-size: 0.75em;
  }
}

